<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/ma_et_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/ma_et_nome"
                android:inputType="textPersonName"
                android:maxLength="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ma_et_fone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/ma_et_fone"
                android:inputType="phone"
                android:maxLength="13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_nome" />

            <TextView
                android:id="@+id/ma_et_tipo"
                android:layout_width="227dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:maxLength="50"
                android:text="@string/ma_et_tipo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_fone" />

            <RadioGroup
                android:id="@+id/ma_rg_tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="130dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_tipo">

                <RadioButton
                    android:id="@+id/ma_rb_familiar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ma_rb_familiar" />

                <RadioButton
                    android:id="@+id/ma_rb_enfermeiro"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ma_rb_enfermeiro" />

                <RadioButton
                    android:id="@+id/ma_rb_outros"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ma_rb_outros" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/ma_rg_ativar_desativar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_rg_tipo">


                <RadioButton
                    android:id="@+id/ma_rb_ativar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/ma_rb_ativar"
                    app:layout_constraintEnd_toStartOf="@+id/ma_rb_desativar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ma_rg_turno" />

                <RadioButton
                    android:id="@+id/ma_rb_desativar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/ma_rb_desativar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ma_rb_ativar"
                    app:layout_constraintTop_toBottomOf="@+id/ma_rg_turno" />
            </RadioGroup>

            <Button
                android:id="@+id/ma_bt_salvar_cuidador"
                android:layout_width="174dp"
                android:layout_height="56dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ma_bt_salvar_cuidador"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ma_bt_limparcuidador"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_rg_ativar_desativar" />

            <Button
                android:id="@+id/ma_bt_limparcuidador"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ma_bt_limpar_cuidador"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ma_bt_salvar_cuidador"
                app:layout_constraintTop_toBottomOf="@+id/ma_rg_ativar_desativar" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>