<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help.paciente.RegistrarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxLength="40"
                android:ems="10"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_numero" />

            <EditText
                android:id="@+id/et_usuario"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:maxLength="50"
                android:hint="@string/et_usuario"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ma_et_telefone"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/ma_et_telefone"
                android:inputType="phone"
                android:maxLength="13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_usuario" />

            <EditText
                android:id="@+id/ma_et_cep"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/ma_et_cep"
                android:inputType="number"
                android:maxLength="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_telefone" />

            <EditText
                android:id="@+id/ma_et_rua"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxLength="20"
                android:ems="10"
                android:hint="@string/ma_et_rua"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/ma_et_bairro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_cep" />

            <EditText
                android:id="@+id/ma_et_bairro"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:maxLength="20"
                android:hint="@string/ma_et_bairro"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ma_et_rua"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_cep" />

            <EditText
                android:id="@+id/ma_et_cidade"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxLength="20"
                android:ems="10"
                android:hint="@string/ma_et_cidade"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/ma_et_estado"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_rua" />

            <Spinner
                android:id="@+id/ma_sp_uf"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ma_et_estado"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_bairro" />

            <TextView
                android:id="@+id/ma_et_estado"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/ma_et_uf"
                app:layout_constraintEnd_toStartOf="@+id/ma_sp_uf"
                app:layout_constraintStart_toEndOf="@+id/ma_et_cidade"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_bairro" />

            <EditText
                android:id="@+id/ma_et_numero"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/ma_et_numero"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/ma_et_complemento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_cidade" />

            <EditText
                android:id="@+id/ma_et_complemento"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/ma_et_complemento"
                android:inputType="text"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ma_et_numero"
                app:layout_constraintTop_toBottomOf="@+id/ma_et_estado" />

            <EditText
                android:id="@+id/et_senha_um"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="Digite a senha"
                android:maxLength="8"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_nova_senha"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="Confirme a Senha"
                android:inputType="textPassword"
                android:maxLength="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_senha_um" />

            <Button
                android:id="@+id/bt_nova_senha"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="REGISTRAR"
                app:layout_constraintEnd_toStartOf="@+id/ma_bt_limpar_paciente"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nova_senha" />

            <Button
                android:id="@+id/ma_bt_limpar_paciente"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/ma_bt_limpar_paciente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_nova_senha"
                app:layout_constraintTop_toBottomOf="@+id/et_nova_senha" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>